# anthropic-quickstarts

./: .pre-commit-config.yaml  .replit  README.md  pyproject.toml  replit.nix
computer-use-demo/: .gitignore  Makefile  _.sh  _bad_idea.sh  _enclave.sh  infrastructure.org  pyproject.toml  setup.sh  shell.nix  validate_bedrock.py
computer-use-demo/dockerfiles/: enclave.Dockerfile
computer-use-demo/docs/: enclave-poc-summary.md
tests/: test_rate_limit_manager.py
utils/: README.md  rate_limit_manager.py
