[tool.poetry]
name = "computer-use-demo"
version = "0.1.0"
description = "Demo of Claude's computer use capabilities"
authors = ["Anthropic"]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"

[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
